test-data/error/lgagst-action-times.hltas
version 1
frames
---lj2-----|------|------|0.001|-|-|1
